[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/gate.png" type="Texture" id=1]
[ext_resource path="res://Scenes/WinStage.gd" type="Script" id=2]
[ext_resource path="res://Sounds/next_level.wav" type="AudioStream" id=3]
[ext_resource path="res://Fonts/AmaticSC-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Explosion.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.6363, 109.911 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 7
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
length = 6.0
step = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Control/Explosion2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/Control/Explosion9:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Control/Control/Explosion8:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Control/Control/Explosion7:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false, true, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Control/Control/Explosion6:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false, true, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Control/Control/Explosion5:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true, true, false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/Control/Control/Explosion4:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false, true, false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/Control/Control/Explosion3:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CanvasLayer/Control/Control/Explosion:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.7, 3.6, 4.5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, true, true, false ]
}

[sub_resource type="Animation" id=7]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.9, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
loop = true

[node name="WinStage" type="Area2D" groups=[
"Win",
]]
position = Vector2( 3.11378, -2.8255 )
scale = Vector2( 0.3, 0.25 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 47.776, -0.229603 )
shape = SubResource( 1 )

[node name="ChangeStage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.607479 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.756863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -20.5
margin_right = 160.0
margin_bottom = 20.5
color = Color( 0.898039, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Felicitări! Ai ajuns la final!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explosion2" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 42.7501, 52.2501 )
scale = Vector2( 0.5, 0.5 )

[node name="Explosion9" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 277, 153.85 )
scale = Vector2( 0.5, 0.5 )

[node name="Explosion8" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 26.0001, 152.85 )
scale = Vector2( 0.5, 0.5 )

[node name="Explosion7" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 177, 153.85 )
scale = Vector2( 0.5, 0.5 )

[node name="Explosion6" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 269, 92.8501 )
scale = Vector2( 0.5, 0.5 )

[node name="Explosion5" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 85.0001, 117.85 )
scale = Vector2( 0.5, 0.5 )

[node name="Explosion4" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 108, 14.85 )
scale = Vector2( 0.5, 0.5 )

[node name="Explosion3" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 196.65, 52.25 )
scale = Vector2( 0.5, 0.5 )

[node name="Explosion" parent="CanvasLayer/Control/Control" instance=ExtResource( 5 )]
position = Vector2( 281.2, 23.75 )
scale = Vector2( 0.5, 0.5 )

[node name="Control2" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.445435
margin_top = -0.44545
margin_right = 0.445435
margin_bottom = -0.44545
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -103.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.427451 )

[node name="Label" type="Label" parent="CanvasLayer/Control2/ColorRect"]
margin_left = 4.00452
margin_top = 1.33485
margin_right = 101.005
margin_bottom = 37.3348
custom_fonts/font = SubResource( 3 )
text = "Verifică dacă ai omorât toți inamicii, dacă ai colectat toate paginile sau dacă ai făcut alegerea înainte de a trece nivelul!"
autowrap = true

[node name="Control3" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control3"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.756863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control3/ColorRect"]
margin_top = 69.5
margin_right = 320.0
margin_bottom = 110.5
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="CanvasLayer/Control3/ColorRect/ColorRect"]
margin_right = 169.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 4 )
text = "Următorul nivel este:"
align = 2
valign = 1

[node name="Label2" type="Label" parent="CanvasLayer/Control3/ColorRect/ColorRect"]
margin_left = 184.0
margin_right = 320.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 5 )
text = "1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explosion = SubResource( 6 )
anims/fade_in = SubResource( 7 )
anims/needtokill = SubResource( 8 )
[connection signal="body_entered" from="." to="." method="_on_ChangeStage_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ChangeStage_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
